fix: prevent scrollbar on drawer content

--- a/src/app/view/pages/view-page/view-page.component.scss
+++ b/src/app/view/pages/view-page/view-page.component.scss
@@ -32,3 +32,7 @@ nav {
     border-bottom: 1px solid rgba(255, 255, 255, 0.12);
   }
 }
+
+.mat-drawer-content {
+  overflow: visible;
+}
